# primegeneratorwasm

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: design.md
src/: PrimeGenerator.cpp  PrimeGenerator.h  PrimeGeneratorBindings.cpp
tests/: PrimeGeneratorSmoke.cpp  wasm-smoke.mjs
web/: PrimeGeneratorClient.js  app.js  index.html  styles.css
